Fixed Dockerfile, updated server.port to 9090

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:postgresql://dpg-d3jq6nq4d50c73fdmn50-a.singapore-postgres.render.com/moneymanager_4upk
 spring.datasource.username=moneymanager_4upk_user
 spring.datasource.password=hhEby7fuMPHgZPwd6XhAHY8CYoyRNh5N
+server.port=9090
