--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-HELP.md
+# Ignore Maven target folder except the built JAR
 target/
+!target/moneymanager-0.0.1-SNAPSHOT.jar
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### STS ###
+# STS ###
 .apt_generated
 .classpath
 .factorypath
@@ -13,21 +14,20 @@ target/
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
+# IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
 
-### NetBeans ###
+# NetBeans ###
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
-/.nb-gradle/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### VS Code ###
+# VS Code ###
 .vscode/
