--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,13 +11,14 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 spring.mail.host=smtp-relay.brevo.com
-spring.mail.port=587
+spring.mail.port=465
 spring.mail.username=${BREVO_USERNAME}
 spring.mail.password=${BREVO_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.from=${BREVO_FROM_EMAIL}
+
 logging.level.org.springframework.core.env=DEBUG
 jwt.secret=8f1b47c6-0b39-4f1b-9d0a-9e63f60c5b28-MyStrongJwtSecretKey2025
 money.manager.frontend.url=${MONEY_MANAGER_FRONTEND_URL}
