--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,12 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 spring.mail.host=smtp-relay.brevo.com
-spring.mail.port=465
+spring.mail.port=2525
 spring.mail.username=${BREVO_USERNAME}
 spring.mail.password=${BREVO_PASSWORD}
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.from=${BREVO_FROM_EMAIL}
 
 logging.level.org.springframework.core.env=DEBUG
