--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,9 @@ spring.datasource.password=Ajayv@10
 
 server.servlet.context-path=/api/v1.0
 
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
 
 spring.mail.host=smtp-relay.brevo.com
 spring.mail.port=2525
@@ -23,9 +21,8 @@ logging.level.org.springframework.core.env=DEBUG
 jwt.secret=8f1b47c6-0b39-4f1b-9d0a-9e63f60c5b28-MyStrongJwtSecretKey2025
 money.manager.frontend.url=${MONEY_MANAGER_FRONTEND_URL}
 
+# Activation URL for Render
+app.base-url=https://money-manager-zf50.onrender.com
+app.activation.url=${app.base-url}
 
-
-app.activation.url=${MONEY_MANAGER_BACKEND_URL}
 spring.profiles.active=prod
-
-
